src/assets/css/globals/_mixins.scss
/* ... */
/**
 * Grid bleeding for content elements
 */
@mixin gridBleed($trailingGutters: false, $fullwidth: false, $isContentWidth: false) {

  @if $trailingGutters == true {
    @if ($isContentWidth == false) {
      @include sizeCurve(padding-left padding-right, bleed, $grid-outer-gutters);
    } @else {
      @include sizeCurve(padding-left padding-right, bleed, $grid-outer-gutters);
    }

    width: calc(100vw);
    @if $fullwidth == false {
      max-width: $sizeGlobalMaxWidth;
    }
    @if $isContentWidth == true {
      max-width: $sizeWidthContent;
    }
  } @else {
    width: calc(100vw + 2px);

    @if $fullwidth == false {
      max-width: $sizeGlobalMaxWidth;
    }
    @if $isContentWidth == true {
      max-width: $sizeWidthContent;
    }
  }
  width: calc(100vw - var(--scrollbar-wd)); //stylelint-disable-line
  transform: translateX(-50%);
  margin-left: 50%;

  @include mq($from: small, $to: medium) {
    $translateLeft: -50% - (2/12/2) * 100;
    $additionalRem: pxToRem(map-get($grid-margin-gutters, tiny)) * 1.5/6;

    transform: translateX(calc(#{$translateLeft} + #{$additionalRem}));
  }
  @include mq($from: medium, $to: large) {
    $translateLeft: -50% - (1/12/2) * 100;
    $additionalRem: pxToRem(map-get($grid-margin-gutters, medium))/12 - 0.01;

    transform: translateX(calc(#{$translateLeft} + #{$additionalRem}));
  }
}

/**
 * Resets the button no styling
 */
@mixin blankButton() {
  border: none;
  background: none;
  padding: 0;
  -webkit-appearance: none; //stylelint-disable-line
  line-height: 1.5;

  text-align: left;
  cursor: pointer;

  &:focus {
    outline: none;
  }
}

/**
 * SVG Icons
 */
@function svg-tickmark($color) {
  $encodedSvg: encode_Base64('<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24 18" style="enable-background:new 0 0 24 18" xml:space="preserve"><path d="M17.25 6.75L9.375 14.25L6 10.875L4.5 12.375L9.375 17.25L18.75 8.25L17.25 6.75Z" fill="' + rgba($color, 0.99) + '" /></svg>'); // stylelint-disable-line

  @return 'data:image/svg+xml;base64,#{$encodedSvg}';
}

/**
 * Transition Creator Mixin, default is set to create the default hover transition
 *
 */
@mixin transition($propertyList, $time: $transitionTimeSimple, $easing: $transitionEasingDefault) {
  @if (type-of($propertyList) == list) {
    $propertyString: '';

    @for $i from 1 through length($propertyList) {
      $propertyString: $propertyString + nth($propertyList, $i) + ' ' + $time + ' ' + $easing + ', ';
    }

    transition: unquote(str-slice($propertyString, 1, -3));
  } @else {
    transition: $propertyList $time $easing;
  }
}

@function multiplyMapValues($map, $factor) {
  $newMap: ();

  @each $breakpoint, $value in $map {
    $newMap: map-merge($newMap, ($breakpoint: $value * $factor));
  }

  @return $newMap;
}

@mixin resetList() {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

/**
 * A Special Mixin to disable hover effects on mobile
 */
@mixin hover($additionalNot: false) {
  @media not all and ( hover: none ) {
    @if $additionalNot {
      &:hover:not(#{$additionalNot}) {
        @content;
      }
    } @else {
      &:hover {
        @content;
      }
    }
  }
}

